# RPi_ServerSocket

./: Doxyfile
ServerSocket/: CMakeLists.txt  bedieningspaneel.h  bedieningspaneel.ui  brandalarmknop.h  globals.cpp  globals.h  main.cpp  main_window.cpp  main_window.h  serverSocket.cpp  serversocket.cpp  serversocket.h  statusled.h
Services/: RPi_ServerSocket.service  RPi_SocketClient.service
SocketClient/: CMakeLists.txt  I2Cclient.cpp  I2Cclient.h  globals.cpp  globals.h  main.cpp  socketclient.cpp  socketclient.h
TestClientSocket/: CMakeLists.txt  main.cpp
docs/: README.md  dataflow-diagram.md  dataformaat.md  elektrisch-diagram.md  klassendiagram.uxf  sequentiediagram.uxf
docs/html/: I2Cclient_8h_source.html  ServerSocket_2globals_8h_source.html  SocketClient_2globals_8h_source.html  annotated.html  bedieningspaneel_8h_source.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classServerSocket-members.html  classServerSocket.html  classSocketClient-members.html  classSocketClient.html  classStatusLed-members.html  classStatusLed.html  classStatusLed__inherit__graph.map  classStatusLed__inherit__graph.md5  classUi_1_1MainWindow-members.html  classUi_1_1MainWindow.html  classUi_1_1MainWindow__coll__graph.map  classUi_1_1MainWindow__coll__graph.md5  classUi_1_1MainWindow__inherit__graph.map  classUi_1_1MainWindow__inherit__graph.md5  classUi__MainWindow-members.html  classUi__MainWindow.html  classUi__MainWindow__coll__graph.map  classUi__MainWindow__coll__graph.md5  classUi__MainWindow__inherit__graph.map  classUi__MainWindow__inherit__graph.md5  classes.html  dir_1d0d2fd0d0fc30d961a05784cd6c1c4f.html  dir_9d0ae6e3525836e21a0842b25346908b.html  files.html  functions.html  functions_func.html  functions_prop.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  (+13 more)
docs/latex/: annotated.tex  classMainWindow.tex  classMainWindow__inherit__graph.md5  (+12 more)
(+21 files in other folders)
